--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
-    "framer-motion": "^1.10.2",
+    "framer-motion": "^1.10.3",
     "gatsby": "^2.20.8",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-manifest": "^2.3.3",
@@ -29,6 +29,7 @@
     "gatsby-plugin-sitemap": "^2.3.1",
     "gatsby-plugin-styled-components": "^3.2.1",
     "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-source-sanity": "^5.0.6",
     "gatsby-transformer-sharp": "^2.4.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
