--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "files.exclude": {
     "src/html.js": true,
-    ".env": true,
+    // ".env": true,
     ".cache": true,
     "icon": true,
     "node_modules": true,
