added hero section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "files.exclude": {
     "src/html.js": true,
-    // ".env": true,
+    ".env": true,
     ".cache": true,
     "icon": true,
     "node_modules": true,
@@ -10,7 +10,7 @@
     "desktop.ini": true,
     "gatsby-browser.js": true,
     "gatsby-node.js": true,
-    // "gatsby-config.js": true,
+    "gatsby-config.js": true,
     "gatsby-ssr.js": true,
     "package-lock.json": true,
     "package.json": true,
