--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,8 @@
     "package-lock.json": true,
     "package.json": true,
     "jsconfig.json": true,
-    "page.js": true,
-    "root.js": true,
+    "page.js": true
+    // "root.js": true,
     // "sw-range-request-handler.js": true
   },
 
