--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,14 +10,14 @@
     "desktop.ini": true,
     "gatsby-browser.js": true,
     "gatsby-node.js": true,
-    // "gatsby-config.js": true,
+    "gatsby-config.js": true,
     "gatsby-ssr.js": true,
     "package-lock.json": true,
     "package.json": true,
     "jsconfig.json": true,
     "page.js": true,
-    "root.js": true
-    // "sw-range-request-handler.js": true
+    "root.js": true,
+    "sw-range-request-handler.js": true
   },
 
   "files.associations": {
