--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-source-sanity": "^5.0.6",
     "gatsby-transformer-sharp": "^2.4.3",
+    "hooks-lib": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
