--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
   "files.exclude": {
-    "src/html.js": true,
-    ".env": true,
-    ".cache": true,
-    "icon": true,
-    "node_modules": true,
-    "public": true,
-    ".gitignore": true,
-    "desktop.ini": true,
-    "gatsby-browser.js": true,
-    "gatsby-node.js": true,
-    "gatsby-config.js": true,
-    "gatsby-ssr.js": true,
-    "package-lock.json": true,
-    "package.json": true,
-    "jsconfig.json": true,
-    "page.js": true,
-    "root.js": true,
-    "sw-range-request-handler.js": true
+    // "src/html.js": true,
+    // ".env": true,
+    // ".cache": true,
+    // "icon": true,
+    // "node_modules": true,
+    // "public": true,
+    // ".gitignore": true,
+    // "desktop.ini": true,
+    // "gatsby-browser.js": true,
+    // "gatsby-node.js": true,
+    // "gatsby-config.js": true,
+    // "gatsby-ssr.js": true,
+    // "package-lock.json": true,
+    // "package.json": true,
+    // "jsconfig.json": true,
+    // "page.js": true,
+    // "root.js": true,
+    // "sw-range-request-handler.js": true
   },
 
   "files.associations": {
