--- a/package.json
+++ b/package.json
@@ -8,37 +8,35 @@
   "scripts": {
     "build": "gatsby build",
     "start": "npm run develop",
-    "serve": "gatsby serve -H 192.168.2.146 ",
-    "develop": "gatsby develop -H 192.168.2.146 ",
-    "local": "gatsby develop -H 192.168.56.1 -p 8001 ",
-    "mobile": "gatsby develop -H 192.168.43.132 -p 8001 ",
+    "serve": "gatsby serve",
+    "develop": "gatsby develop ",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.7",
-    "babel-plugin-styled-components": "^1.10.7",
-    "framer-motion": "^1.10.3",
-    "gatsby": "^2.20.8",
-    "gatsby-image": "^2.3.1",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-netlify": "^2.2.1",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.1",
+    "babel-plugin-styled-components": "^1.11.1",
+    "framer-motion": "^2.6.13",
+    "gatsby": "^2.24.62",
+    "gatsby-image": "^2.4.19",
+    "gatsby-plugin-manifest": "^2.4.30",
+    "gatsby-plugin-netlify": "^2.3.15",
+    "gatsby-plugin-offline": "^3.2.28",
+    "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-root-import": "^2.0.5",
-    "gatsby-plugin-sharp": "^2.5.3",
-    "gatsby-plugin-sitemap": "^2.3.1",
-    "gatsby-plugin-styled-components": "^3.2.1",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-source-sanity": "^5.0.6",
-    "gatsby-transformer-sharp": "^2.4.3",
-    "hooks-lib": "^1.0.1",
+    "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-plugin-sitemap": "^2.4.13",
+    "gatsby-plugin-styled-components": "^3.3.11",
+    "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-source-sanity": "^6.0.4",
+    "gatsby-transformer-sharp": "^2.5.15",
+    "hooks-lib": "^1.0.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "react-slick": "^0.25.2",
+    "react-helmet": "^6.1.0",
+    "react-slick": "^0.27.11",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
